--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,28 +4,28 @@
   "description": "A comprehensive Nepali news aggregator application.",
   "icons": [
     {
-      "src": "/logo.svg",
+      "src": "logo.svg",
       "type": "image/svg+xml",
       "sizes": "any",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo-192.png",
+      "src": "logo-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo-512.png",
+      "src": "logo-512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/logo-144.png",
+      "src": "logo-144.png",
       "type": "image/png",
       "sizes": "144x144"
     }
   ],
-  "start_url": "/",
+  "start_url": ".",
   "background_color": "#f8fafc",
   "display": "standalone",
   "theme_color": "#4361ee"
